--- a/stylus/footer.styl
+++ b/stylus/footer.styl
@@ -79,11 +79,13 @@
         @media (max-width: 465px)
             padding 0
             margin 30px 0 0 0
-            text-align center
 
         p
             margin 0 0 28px 0
             text-transform uppercase
+
+            @media (max-width: 465px)
+                text-align center
 
     &__menu
         display flex  
