--- a/stylus/header.styl
+++ b/stylus/header.styl
@@ -181,8 +181,10 @@ summary::-webkit-details-marker
     padding 0 15px
     background-color #ffffff
     border-radius 0 0 10px 10px
-    
 
+    @media (max-width: 600px)
+        border 1px dashed color-main
+    
     a
         margin 0 0 5px 0
 
